--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,7 +2,7 @@ name: ci
 
 on:
   push:
-    branches: ["testing","master"]
+    branches: ["master", "testing"]
 
 jobs:
   multi:
@@ -26,3 +26,5 @@ jobs:
           file: ./Dockerfile
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
           push: true
+          tags: |
+            ridelore/ledfx-docker:latest
